--- a/qr-code-component-main/style.css
+++ b/qr-code-component-main/style.css
@@ -1,52 +1,78 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
-
-*{
-    margin: 0;
-    padding: 0;
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap");
+:root {
+  --body-font: "Outfit", sans-serif;
+  --white: hsl(0, 0%, 100%);
+  --light-gray: hsl(212, 45%, 89%);
+  --grayish-blue: hsl(220, 15%, 55%);
+  --dark-blue: hsl(218, 44%, 22%);
 }
 
-body{
-    max-width: 1440px;
-    font-family: 'Outfit', sans-serif;
-    background-color: hsl(212, 45%, 89%);
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.attribution { 
-    font-size: 11px; 
-    text-align: center; 
+body {
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+  overflow-y: scroll;
+  font-size: 15px;
+  box-sizing: border-box;
+  font-family: var(--body-font);
+  background-color: var(--light-gray);
 }
-.attribution a { 
-    color: hsl(228, 45%, 44%); 
+body::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
 }
-.container{
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-}
-.card{
-    position: relative;
-    margin: 0 auto;
-    width: 270px;
-    text-align: center;
-    margin-top: 15vh;
-    background-color:white;
-    border-radius: 25px;
-    
-}
-.card img{
-    border-radius: 10px;
-    margin-top: 2vh;
-}
-.card h1{
-    font-size: 18px;
-    font-weight: 700;
-    padding:3vh 1rem;
 
+/** QR Container **/
+
+.qr-container {
+  display: flex;
+  flex-direction: column;
+  width: max(20%, 20rem);
+  /* height: min(100%, 31.25rem); */
+  height: auto;
+  background-color: var(--white);
+  margin: 0 auto;
+  text-align: center;
+  align-items: center;
+  border-radius: 20px;
+  margin-top: 9.37rem;
+  margin-bottom: 9.37rem;
+  gap: 0.2rem;
+  box-shadow: -2px 10px 24px -11px rgba(0, 0, 0, 0.62);
+  -webkit-box-shadow: -2px 10px 24px -11px rgba(0, 0, 0, 0.62);
+  -moz-box-shadow: -2px 10px 24px -11px rgba(0, 0, 0, 0.62);
 }
-.card p{
-    font-size: 17px;
-    font-weight: 400;
-    color:gray;
-    margin:0 1rem;
-    margin-bottom: 5vh;
+
+/** Image Block **/
+.img-block img {
+  display: block;
+  max-width: 90%;
+  margin: auto;
+  border-radius: 10px;
+  margin-top: 1.2rem;
+  cursor: pointer;
+}
+/** Info Block **/
+.info-block {
+  padding: 1.2rem;
+}
+h1 {
+  font-size: 1.4rem;
+  color: var(--dark-blue);
+}
+
+.info-block p {
+  padding: 1rem;
+  word-spacing: 1px;
+  color: var(--grayish-blue);
+}
+
+/** Media Query **/
+@media screen and (max-width: 1020px) {
+  .qr-container {
+    margin-top: 5rem;
+  }
 }
